--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import "./css/animate.min.css";
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat-Regular'), url('./rsc/Montserrat-Regular.otf') format('opentype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
 
 body {
     padding: 0;
@@ -22,8 +30,6 @@ body {
 
 .tile {
     padding: 20px;
-    /*transition: all .25s ease-out;*/
-    /*background: rgba(0,0,0,0.5);*/
     cursor: pointer;
     height: 100%;
     color: white;
