--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import "./css/animate.min.css";
-
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
@@ -12,8 +10,7 @@ body {
     padding: 0;
     margin: 0;
     height: 100vh;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    width: 1024px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -31,6 +28,22 @@ body {
     height: 100%;
     color: white;
     font-size: 2em;
+    transition: transform 1s, opacity 1s;
+}
+
+.tile.outLeft {
+    transform: translate(-100%, 0);
+    opacity: 0;
+}
+.tile.outRight {
+    transform: translate(100%, 0);
+    opacity: 0;
+}
+.tile.shiftLeft {
+    transform: translate(-100%, 0);
+}
+.tile.shiftRight {
+    transform: translate(100%, 0);
 }
 
 .tile h2 {
@@ -58,5 +71,16 @@ body {
 
 .text {
     display: none;
-    flex: 2;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+}
+
+.text[data-page='chair'] {
+    /*display: initial;*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 33.33333333333333%;*/
+    /*margin: 30px;*/
+    /*font-size: 200%;*/
+    /*overflow: scroll;*/
 }
