--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,17 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.container {
+    height: 100vh;
+}
+
 .main-menu {
     display: flex;
-    width: 1024px;
-    height: 768px;
+    height: 100%;
 }
 
 .tile {
     flex: 1;
-    height: 100%;
-    padding: 20px;
-    cursor: pointer;
     height: 100%;
     color: white;
     font-size: 2em;
@@ -71,16 +71,12 @@ body {
 
 .text {
     display: none;
-    -webkit-overflow-scrolling: touch;
+    flex: 2;
+    font-size: 200%;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
-.text[data-page='chair'] {
-    /*display: initial;*/
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*left: 33.33333333333333%;*/
-    /*margin: 30px;*/
-    /*font-size: 200%;*/
-    /*overflow: scroll;*/
+.text p {
+    padding: 0 30px 0 30px;
 }
