--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,6 @@ a.buy {
     opacity: 0;
 }
 
-.text p, 
-.text h1, 
-.text h2, 
-.text h3 {
-    padding: 0 30px 0 30px;
+.text_container {
+    padding: 0 40px 0 40px;
 }
